<resources>
    <string name="app_name">Visitor App</string>
    <string name="jmd_infotech">JMD INFOTECH</string>
    <string name="dashboard">Dashboard</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="share_application">Share Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="chapter_list">Chapter List</string>
    <string name="launch_dc">Launch Dc</string>
    <string name="select_date">Select Date</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="custom">Custom</string>
    <string name="search_name_and_category">Search(Name And Category)</string>

</resources>
